@@ -1,4 +1,6 @@
 ver 0.20 (not yet released)
+* output
+  - pulse: set channel map to WAVE-EX
 
 ver 0.19.2 (not yet released)
 * decoder
